# FusionAI

./: .env.example  .gitignore  LICENSE  config.py  main.py  pyproject.toml  template.py
backend/core/: exceptions.py  logging.py
services/research_service/data_processing/audio_processing/: audio_transcriber.py  youtube_transcriber.py
services/research_service/data_processing/doc_processing/: doc_processor.py
services/research_service/data_processing/web_scraping/: web_scraper.py
services/research_service/embeddings/: embedding_generator.py
