[project]
name = "fusionai"
version = "0.1.0"
description = "An All-in-One AI Tutor for Learning, Practice, and Guidance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai>=0.54.1",
    "firecrawl>=4.18.1",
    "path>=17.1.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
]
