[project]
name = "fusionai"
version = "0.1.0"
description = "An All-in-One AI Tutor for Learning, Practice, and Guidance"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "assemblyai>=0.54.1",
    "firecrawl>=4.18.1",
    "langchain-google-genai>=4.2.1",
    "numpy>=2.4.3",
    "path>=17.1.1",
    "posthog>=7.9.12",
    "pydot>=4.0.1",
    "pymupdf>=1.27.1",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "youtube-transcript-api>=1.2.4",
    "yt-dlp>=2026.3.3",
]
